# pytrees

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  pyproject.toml  pytrees_example.py  setup.py  simple_run.py
.github/workflows/: alternative-branch.yml  publish.yml  rust.yml
benches/: algo_benches.rs  structures_bench.rs
examples/: parallel_clone_inside_murtree.rs  parallel_large.rs
exec/: clean_datasets.py  fake_data.py  functions.py  models.py  run_exp.py  simple_run.py  synthetic_data_exps.py
experiments/: base_experiments.py  eval_parallelism.py  example.py  know_data.py  large_data_experiments.py  runtime_evaluation.py  synthetic_data.py
pylgdt/: __init__.py  idk_predictor.py  lgdt_predictor.py  predictor.py
pylgdt/experiments/utils/: models.py
pylgdt/predictors/: __init__.py  lgdt_predictor.py
pytrees/: __init__.py  predictor.py
pytrees/experiments/utils/: models.py
pytrees/lgdt/: lgdt.py
pytrees/optimal/: __init__.py  dl85.py  lds_dl85.py
src/: lib.rs  main.rs
src/algorithms/: algorithm_trait.rs  dl85.rs  idk.rs  info_gain.rs  lds_dl85.rs  lgdt.rs  mod.rs  murtree.rs  para_murtree.rs  parallel_lgdt.rs  parallel_lgdt_murtree.rs
src/dataset/: binary_dataset.rs  data_trait.rs  data_types.rs  file_reader.rs  mod.rs
src/heuristics/: mod.rs
src/post_process/: cc_pruning.rs
src/pycore/: less_greedy.rs  optimal.rs
src/structures/: binary_tree.rs  bitsets_structure.rs  double_pointer.rs  horizontal_binary_structure.rs  mod.rs  raw_binary_structure.rs  reversible_sparse_bitsets_structure.rs  rsparse_trail.rs  structure_trait.rs  structures_types.rs
tests/: integration_tests.rs
(+5 files in other folders)
