[package]
name = "perf-lgdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.10.3"
num-traits = "0.2"


[[bench]]
name = "structures_bench"
harness = false


[dev-dependencies]
bencher = "0.1.5"
