[package]
name = "perf-lgdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.10.3"
float-cmp = "0.9.0"
paste = "1.0.9"



[[bench]]
name = "algo_benches"
harness = false


[dev-dependencies]
criterion = "0.4.0"
bencher = "0.1.5"
