[package]
name = "perf-lgdt"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
debug = true
opt-level = 3

[lib]
name = "perf_lgdt"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
bench = true
test = true

[[bin]]
name = "lgdt"
path = 'src/main.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.17.2", features = ["extension-module"] }
pyo3-log = "0.7.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
itertools = "0.10.3"
float-cmp = "0.9.0"
paste = "1.0.9"
ndarray = "0.15.3"
numpy = "0.17.2"
nohash-hasher = "0.2.0"


[[bench]]
name = "algo_benches"
harness = false


[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.10.1", features = ["flamegraph"] }
bencher = "0.1.5"
